diesel_compile_tests/tests/fail/filter_requires_bool_nonaggregate_expression.stderr
error[E0277]: the trait bound `diesel::sql_types::Text: BoolOrNullableBool` is not satisfied
  --> $DIR/filter_requires_bool_nonaggregate_expression.rs:15:26
   |
15 |     let _ = users::table.filter(users::name);
   |                          ^^^^^^ the trait `BoolOrNullableBool` is not implemented for `diesel::sql_types::Text`
   |
   = note: required because of the requirements on the impl of `FilterDsl<columns::name>` for `SelectStatement<FromClause<users::table>>`

error[E0277]: the trait bound `diesel::expression::is_aggregate::Yes: MixedAggregates<diesel::expression::is_aggregate::No>` is not satisfied
  --> $DIR/filter_requires_bool_nonaggregate_expression.rs:16:26
   |
16 |     let _ = users::table.filter(sum(users::id).eq(1));
   |                          ^^^^^^ the trait `MixedAggregates<diesel::expression::is_aggregate::No>` is not implemented for `diesel::expression::is_aggregate::Yes`
   |
   = help: the following implementations were found:
             <diesel::expression::is_aggregate::Yes as MixedAggregates<diesel::expression::is_aggregate::Never>>
             <diesel::expression::is_aggregate::Yes as MixedAggregates<diesel::expression::is_aggregate::Yes>>
   = note: required because of the requirements on the impl of `FilterDsl<Grouped<diesel::expression::operators::Eq<aggregate_folding::sum::sum<diesel::sql_types::Integer, columns::id>, diesel::expression::bound::Bound<diesel::sql_types::Nullable<diesel::sql_types::BigInt>, i64>>>>` for `SelectStatement<FromClause<users::table>>`
